# wildcard

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
.githooks/: README.md  pre-commit
src/: CMakeLists.txt  main.cpp  setlocale.cpp  setlocale.h  wildcard.cpp  wildcard.h
tests/: CMakeLists.txt  complex_main.cpp
